logs/validate.20260323-214431.log
error[E0308]: mismatched types
   --> src/Chap43/OrderedTableStPer.rs:865:56
    |
808 |     impl<K: StT + Ord, V: StT + Ord> OrderedTableStPerTrait<K, V> for OrderedTableStPer<K, V> {
    |          - found this type parameter
...
865 |             let existing = bst_find_by_key(&self.tree, k);
    |                            ---------------             ^ expected `&K`, found type parameter `K`
    |                            |
    |                            arguments to this function are incorrect
    |
    = note:   expected reference `&_`
            found type parameter `_`
note: function defined here
   --> src/Chap43/OrderedTableStPer.rs:353:8
    |
353 |     fn bst_find_by_key<K: StT + Ord, V: StT + Ord>(
    |        ^^^^^^^^^^^^^^^
354 |         tree: &ParamBST<Pair<K, V>>,
355 |         k: &K,
    |         -----
help: consider borrowing here
    |
865 |             let existing = bst_find_by_key(&self.tree, &k);
    |                                                        +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
Elapsed: 17s
